--- a/server/src/dev/resources/application.yml
+++ b/server/src/dev/resources/application.yml
@@ -1,3 +1,12 @@
+logging:
+  level:
+    org:
+      hibernate:
+        engine:
+          transaction:
+            internal:
+              TransactionImpl: DEBUG
+
 server:
   port: 8080
 
