Add ability to clear the database on application start Add way to create admins
# Conflicts:
#	server/src/main/java/org/eclipse/openvsx/RegistryApplication.java

--- a/server/src/dev/resources/application.yml
+++ b/server/src/dev/resources/application.yml
@@ -107,6 +107,12 @@ bucket4j:
               unit: seconds
 
 ovsx:
+  admins:
+    login-names:
+      - amvanbaren
+      - kineticsquid
+  database:
+    clear-on-start: true
   databasesearch:
     enabled: false
   elasticsearch:
